--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness | Abdelilah</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="imgs/imgs/favicon.png">
+    <link rel="icon" href="assets/imgs/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/boxicons/2.1.0/css/boxicons.min.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="imgs/imgs/favicon.png" alt="logo">
+                <img src="assets/imgs/favicon.png" alt="logo">
                 <h2><span>Fit</span>ness</h2>
             </div>
             <ul>
