--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2022 Fitlife. All Rights Reserved By <a href="#" class="copyright-link">codewithsadee.</a>
+          &copy; 2024. All Rights Reserved By <a href="https://abdelilah-portfolio.vercel.app/" class="copyright-link">Abdelilah</a>
         </p>
 
         <ul class="footer-bottom-list">
