--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
 
       <!-- 
-        - #Programme
+        - #EXERCICES
       -->
 
       <section class="section exercices" id="exercices" aria-label="exercices">
@@ -211,7 +211,7 @@
             <li class="scrollbar-item">
               <div class="exercices-card">
 
-                <div class="card-banner img-holder" style="--width: 440; --height: 270;">
+                <div class="card-banner img-holder" style="--width: 440; --height: 405;">
                   <img src="assets/images/biceps-1.gif" width="440" height="270" loading="lazy"
                     alt="Going to the gym for the first time" class="img-cover">
 
@@ -220,7 +220,7 @@
                 <div class="card-content">
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Going to the gym for the first time</a>
+                    <a href="#" class="card-title">Exercices For Biceps</a>
                   </h3>
 
                   <p class="card-text">
@@ -228,7 +228,7 @@
                     habitasse platea dictumst.
                   </p>
 
-                  <a href="#" class="btn-link has-before">Read More</a>
+                  <a href="Exercices.html" class="btn-link has-before">Read More</a>
 
                 </div>
 
@@ -238,7 +238,7 @@
             <li class="scrollbar-item">
               <div class="exercices-card">
 
-                <div class="card-banner img-holder" style="--width: 440; --height: 270;">
+                <div class="card-banner img-holder" style="--width: 440; --height: 405;">
                   <img src="assets/images/triceps-1.gif" width="440" height="270" loading="lazy"
                     alt="Parturient accumsan cacus pulvinar magna" class="img-cover">
 
@@ -247,7 +247,7 @@
                 <div class="card-content">
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Parturient accumsan cacus pulvinar magna</a>
+                    <a href="#" class="card-title">Exercices for Triceps</a>
                   </h3>
 
                   <p class="card-text">
@@ -255,7 +255,7 @@
                     habitasse platea dictumst.
                   </p>
 
-                  <a href="#" class="btn-link has-before">Read More</a>
+                  <a href="Exercices.html" class="btn-link has-before">Read More</a>
 
                 </div>
 
@@ -265,8 +265,8 @@
             <li class="scrollbar-item">
               <div class="exercices-card">
 
-                <div class="card-banner img-holder" style="--width: 440; --height: 270;">
-                  <img src="assets/images/back-1.gif" width="440" height="270" loading="lazy"
+                <div class="card-banner img-holder" style="--width: 440; --height: 405;">
+                  <img src="assets/images/sdr-1.gif" width="440" height="270" loading="lazy"
                     alt="Risus purus namien parturient accumsan cacus" class="img-cover">
 
                 </div>
@@ -274,7 +274,7 @@
                 <div class="card-content">
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Risus purus namien parturient accumsan cacus</a>
+                    <a href="#" class="card-title">Exercices for Sdr</a>
                   </h3>
 
                   <p class="card-text">
@@ -282,7 +282,7 @@
                     habitasse platea dictumst.
                   </p>
 
-                  <a href="#" class="btn-link has-before">Read More</a>
+                  <a href="Exercices.html" class="btn-link has-before">Read More</a>
 
                 </div>
 
