--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
     - #FOOTER
   -->
 
-  <!-- <footer class="footer">
+  <footer class="footer">
 
     <div class="section footer-top bg-dark has-bg-image" style="background-image: url('./assets/images/footer-bg.png')">
       <div class="container">
@@ -313,36 +313,14 @@
         <div class="footer-brand">
 
           <a href="#" class="logo">
-            <ion-icon name="barbell-sharp" aria-hidden="true"></ion-icon>
+            <img src="favicon.svg" alt="logo">
 
-            <span class="span">Fitlife</span>
+            <span class="span">Fitness</span>
           </a>
 
           <p class="footer-brand-text">
             Etiam suscipit fringilla ullamcorper sed malesuada urna nec odio.
           </p>
-
-          <div class="wrapper">
-
-            <img src="./assets/images/footer-clock.png" width="34" height="34" loading="lazy" alt="Clock">
-
-            <ul class="footer-brand-list">
-
-              <li>
-                <p class="footer-brand-title">Monday - Friday</p>
-
-                <p>7:00Am - 10:00Pm</p>
-              </li>
-
-              <li>
-                <p class="footer-brand-title">Saturday - Sunday</p>
-
-                <p>7:00Am - 2:00Pm</p>
-              </li>
-
-            </ul>
-
-          </div>
 
         </div>
 
@@ -353,19 +331,19 @@
           </li>
 
           <li>
-            <a href="#" class="footer-link">Home</a>
+            <a href="#home" class="footer-link">Home</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">About Us</a>
+            <a href="#about" class="footer-link">About Us</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Classes</a>
+            <a href="programme.html" class="footer-link">Programme</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Blog</a>
+            <a href="Exercices.html" class="footer-link">Exercices</a>
           </li>
 
           <li>
@@ -382,23 +360,13 @@
 
           <li class="footer-list-item">
             <div class="icon">
-              <ion-icon name="location" aria-hidden="true"></ion-icon>
-            </div>
-
-            <address class="address footer-link">
-              1247/Plot No. 39, 15th Phase, Colony, Kukatpally, Hyderabad
-            </address>
-          </li>
-
-          <li class="footer-list-item">
-            <div class="icon">
               <ion-icon name="call" aria-hidden="true"></ion-icon>
             </div>
 
             <div>
-              <a href="tel:18001213637" class="footer-link">1800-121-3637</a>
+              <a href="tel:+212775242734" class="footer-link">+212 775-242734</a>
 
-              <a href="tel:+915552348765" class="footer-link">+91 555 234-8765</a>
+              <a href="tel:+212675109834" class="footer-link">+212 675-109834</a>
             </div>
           </li>
 
@@ -408,9 +376,9 @@
             </div>
 
             <div>
-              <a href="mailto:info@fitlife.com" class="footer-link">info@fitlife.com</a>
+              <a href="mailto:abdelilaheddalili09@gmail.com" class="footer-link">abdelilaheddalili09@gmail.com</a>
 
-              <a href="mailto:services@fitlife.com" class="footer-link">services@fitlife.com</a>
+              <a href="mailto:abdelilaheddalili09@gmail.com" class="footer-link">abdelilaheddalili09@gmail.com</a>
             </div>
           </li>
 
@@ -437,19 +405,19 @@
             <ul class="social-list">
 
               <li>
-                <a href="#" class="social-link">
+                <a href="https://web.facebook.com/people/Coding-With-Me/61565525803915/" target="_blank" class="social-link">
                   <ion-icon name="logo-facebook"></ion-icon>
                 </a>
               </li>
 
               <li>
-                <a href="#" class="social-link">
+                <a href="https://www.instagram.com/coding_widh_me/" target="_blank" class="social-link">
                   <ion-icon name="logo-instagram"></ion-icon>
                 </a>
               </li>
 
               <li>
-                <a href="#" class="social-link">
+                <a href="https://x.com/AEddalili57581" target="_blank" class="social-link">
                   <ion-icon name="logo-twitter"></ion-icon>
                 </a>
               </li>
@@ -463,28 +431,12 @@
     </div>
 
     <div class="footer-bottom">
-      <div class="container">
-
         <p class="copyright">
-          &copy; 2024. All Rights Reserved By <a href="https://abdelilah-portfolio.vercel.app/" class="copyright-link">Abdelilah</a>
+          &copy; 2024. All Rights Reserved By <a href="https://abdelilah-portfolio.vercel.app/" class="copyright-link">Abdelilah</a> Eddalili
         </p>
-
-        <ul class="footer-bottom-list">
-
-          <li>
-            <a href="#" class="footer-bottom-link has-before">Privacy Policy</a>
-          </li>
-
-          <li>
-            <a href="#" class="footer-bottom-link has-before">Terms & Condition</a>
-          </li>
-
-        </ul>
-
-      </div>
     </div>
 
-  </footer> -->
+  </footer>
 
 
 
