--- a/programme.html
+++ b/programme.html
@@ -78,7 +78,7 @@
       -->
 
       <section class="section hero bg-dark has-after has-bg-image" id="home" aria-label="hero" data-section
-        style="background-image: url('assets/images/hero-bg.png')">
+        style="background-image: url('assets/images/banner-programme.png')">
         <div class="container">
 
           <div class="hero-content">
@@ -279,8 +279,6 @@
   -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-
-
 
 
 </body>
