--- a/programme.html
+++ b/programme.html
@@ -6,6 +6,7 @@
     <title>Fitness | Programme</title>
     <link rel="shortcut icon" href="favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/programme.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -21,7 +22,6 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <!-- <ion-icon name="barbell-sharp" aria-hidden="true"></ion-icon> -->
          <img src="favicon.svg" alt="">
         <span class="span">Fitness</span>
       </a>
@@ -76,43 +76,8 @@
       <!-- 
         - #HERO
       -->
-
-      <section class="section hero bg-dark has-after has-bg-image" id="home" aria-label="hero" data-section
+      <section class="section hero bg-dark " id="home" aria-label="hero" data-section
         style="background-image: url('assets/images/banner-programme.png')">
-        <div class="container">
-
-          <div class="hero-content">
-
-            <p class="hero-subtitle">
-              <strong class="strong">The Best</strong>Fitness Club
-            </p>
-
-            <h1 class="h1 hero-title">Work Hard To Get Better Life</h1>
-
-            <p class="section-text">
-              Duis mollis felis quis libero dictum vehicula. Duis dictum lorem mi, a faucibus nisi eleifend eu.
-            </p>
-
-            <a href="#" class="btn btn-primary">Get Started</a>
-
-          </div>
-
-          <div class="hero-banner">
-
-            <img src=" assets/images/hero-banner.png" width="660" height="753" alt="hero banner" class="w-100">
-
-            <img src=" assets/images/hero-circle-one.png" width="666" height="666" aria-hidden="true" alt=""
-              class="circle circle-1">
-            <img src=" assets/images/hero-circle-two.png" width="666" height="666" aria-hidden="true" alt=""
-              class="circle circle-2">
-
-            <img src=" assets/images/heart-rate.svg" width="255" height="270" alt="heart rate"
-              class="abs-img abs-img-1">
-            <img src=" assets/images/calories.svg" width="348" height="224" alt="calories" class="abs-img abs-img-2">
-
-          </div>
-
-        </div>
       </section>
 
 
