--- a/Exercices.html
+++ b/Exercices.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fitness - Work Hard To Get Better Life</title>
   <link rel="shortcut icon" href="favicon.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="assets/css/style-2.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,7 +32,6 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <!-- <ion-icon name="barbell-sharp" aria-hidden="true"></ion-icon> -->
          <img src="favicon.svg" alt="">
         <span class="span">Fitness</span>
       </a>
@@ -45,11 +45,11 @@
         <ul class="navbar-list">
 
           <li>
-            <a href="#home" class="navbar-link" data-nav-link>Home</a>
+            <a href="index.html" class="navbar-link" data-nav-link>Home</a>
           </li>
 
           <li>
-            <a href="#about" class="navbar-link" data-nav-link>About Us</a>
+            <a href="index.html#about" class="navbar-link" data-nav-link>About Us</a>
           </li>
 
           <li>
@@ -90,42 +90,8 @@
         - #HERO
       -->
 
-      <section class="section hero bg-dark has-after has-bg-image" id="home" aria-label="hero" data-section
-        style="background-image: url('assets/images/hero-bg.png')">
-        <div class="container">
-
-          <div class="hero-content">
-
-            <p class="hero-subtitle">
-              <strong class="strong">The Best</strong>Fitness Club
-            </p>
-
-            <h1 class="h1 hero-title">Work Hard To Get Better Life</h1>
-
-            <p class="section-text">
-              Duis mollis felis quis libero dictum vehicula. Duis dictum lorem mi, a faucibus nisi eleifend eu.
-            </p>
-
-            <a href="#" class="btn btn-primary">Get Started</a>
-
-          </div>
-
-          <div class="hero-banner">
-
-            <img src=" assets/images/hero-banner.png" width="660" height="753" alt="hero banner" class="w-100">
-
-            <img src=" assets/images/hero-circle-one.png" width="666" height="666" aria-hidden="true" alt=""
-              class="circle circle-1">
-            <img src=" assets/images/hero-circle-two.png" width="666" height="666" aria-hidden="true" alt=""
-              class="circle circle-2">
-
-            <img src=" assets/images/heart-rate.svg" width="255" height="270" alt="heart rate"
-              class="abs-img abs-img-1">
-            <img src=" assets/images/calories.svg" width="348" height="224" alt="calories" class="abs-img abs-img-2">
-
-          </div>
-
-        </div>
+      <section class="section hero  has-bg-image" id="home" aria-label="hero" data-section
+        style="background-image: url('assets/images/banner-programme-2.png')">
       </section>
 
 
@@ -139,7 +105,7 @@
 
           <p class="section-subtitle">exercices</p>
 
-          <h2 class="h2 section-title text-center">Exercices Fitness</h2>
+          <h2 class="h2 section-title text-center">Exercices Tricesps</h2>
 
           <ul class="exercices-list has-scrollbar">
 
@@ -162,8 +128,6 @@
                     Praesent id ipsum pellentesque lectus dapibus condimentum curabitur eget risus quam. In hac
                     habitasse platea dictumst.
                   </p>
-
-                  <a href="Exercices.html" class="btn-link has-before">Read More</a>
 
                 </div>
 
@@ -190,7 +154,90 @@
                     habitasse platea dictumst.
                   </p>
 
-                  <a href="Exercices.html" class="btn-link has-before">Read More</a>
+                </div>
+
+              </div>
+            </li>
+
+            <li class="scrollbar-item">
+              <div class="exercices-card">
+
+                <div class="card-banner img-holder" style="--width: 440; --height: 405;">
+                  <img src="assets/images/sdr-1.gif" width="440" height="270" loading="lazy"
+                    alt="Risus purus namien parturient accumsan cacus" class="img-cover">
+
+                </div>
+
+                <div class="card-content">
+
+                  <h3 class="h3">
+                    <a href="#" class="card-title">Exercices for Sdr</a>
+                  </h3>
+
+                  <p class="card-text">
+                    Praesent id ipsum pellentesque lectus dapibus condimentum curabitur eget risus quam. In hac
+                    habitasse platea dictumst.
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+
+          </ul>
+
+        </div>
+        <div class="container">
+
+          <h2 class="h2 section-title text-center">Exercices Tricesps</h2>
+
+          <ul class="exercices-list has-scrollbar">
+
+            <li class="scrollbar-item">
+              <div class="exercices-card">
+
+                <div class="card-banner img-holder" style="--width: 440; --height: 405;">
+                  <img src="assets/images/biceps-1.gif" width="440" height="270" loading="lazy"
+                    alt="Going to the gym for the first time" class="img-cover">
+
+                </div>
+
+                <div class="card-content">
+
+                  <h3 class="h3">
+                    <a href="#" class="card-title">Exercices For Biceps</a>
+                  </h3>
+
+                  <p class="card-text">
+                    Praesent id ipsum pellentesque lectus dapibus condimentum curabitur eget risus quam. In hac
+                    habitasse platea dictumst.
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li class="scrollbar-item">
+              <div class="exercices-card">
+
+                <div class="card-banner img-holder" style="--width: 440; --height: 405;">
+                  <img src="assets/images/triceps-1.gif" width="440" height="270" loading="lazy"
+                    alt="Parturient accumsan cacus pulvinar magna" class="img-cover">
+
+                </div>
+
+                <div class="card-content">
+
+                  <h3 class="h3">
+                    <a href="#" class="card-title">Exercices for Triceps</a>
+                  </h3>
+
+                  <p class="card-text">
+                    Praesent id ipsum pellentesque lectus dapibus condimentum curabitur eget risus quam. In hac
+                    habitasse platea dictumst.
+                  </p>
+
 
                 </div>
 
@@ -217,7 +264,180 @@
                     habitasse platea dictumst.
                   </p>
 
-                  <a href="Exercices.html" class="btn-link has-before">Read More</a>
+
+                </div>
+
+              </div>
+            </li>
+
+          </ul>
+
+        </div>
+        <div class="container">
+
+
+          <h2 class="h2 section-title text-center">Exercices Tricesps</h2>
+
+          <ul class="exercices-list has-scrollbar">
+
+            <li class="scrollbar-item">
+              <div class="exercices-card">
+
+                <div class="card-banner img-holder" style="--width: 440; --height: 405;">
+                  <img src="assets/images/biceps-1.gif" width="440" height="270" loading="lazy"
+                    alt="Going to the gym for the first time" class="img-cover">
+
+                </div>
+
+                <div class="card-content">
+
+                  <h3 class="h3">
+                    <a href="#" class="card-title">Exercices For Biceps</a>
+                  </h3>
+
+                  <p class="card-text">
+                    Praesent id ipsum pellentesque lectus dapibus condimentum curabitur eget risus quam. In hac
+                    habitasse platea dictumst.
+                  </p>
+
+
+                </div>
+
+              </div>
+            </li>
+
+            <li class="scrollbar-item">
+              <div class="exercices-card">
+
+                <div class="card-banner img-holder" style="--width: 440; --height: 405;">
+                  <img src="assets/images/triceps-1.gif" width="440" height="270" loading="lazy"
+                    alt="Parturient accumsan cacus pulvinar magna" class="img-cover">
+
+                </div>
+
+                <div class="card-content">
+
+                  <h3 class="h3">
+                    <a href="#" class="card-title">Exercices for Triceps</a>
+                  </h3>
+
+                  <p class="card-text">
+                    Praesent id ipsum pellentesque lectus dapibus condimentum curabitur eget risus quam. In hac
+                    habitasse platea dictumst.
+                  </p>
+
+
+                </div>
+
+              </div>
+            </li>
+
+            <li class="scrollbar-item">
+              <div class="exercices-card">
+
+                <div class="card-banner img-holder" style="--width: 440; --height: 405;">
+                  <img src="assets/images/sdr-1.gif" width="440" height="270" loading="lazy"
+                    alt="Risus purus namien parturient accumsan cacus" class="img-cover">
+
+                </div>
+
+                <div class="card-content">
+
+                  <h3 class="h3">
+                    <a href="#" class="card-title">Exercices for Sdr</a>
+                  </h3>
+
+                  <p class="card-text">
+                    Praesent id ipsum pellentesque lectus dapibus condimentum curabitur eget risus quam. In hac
+                    habitasse platea dictumst.
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+
+          </ul>
+
+        </div>
+        <div class="container">
+
+
+          <h2 class="h2 section-title text-center">Exercices Tricesps</h2>
+
+          <ul class="exercices-list has-scrollbar">
+
+            <li class="scrollbar-item">
+              <div class="exercices-card">
+
+                <div class="card-banner img-holder" style="--width: 440; --height: 405;">
+                  <img src="assets/images/biceps-1.gif" width="440" height="270" loading="lazy"
+                    alt="Going to the gym for the first time" class="img-cover">
+
+                </div>
+
+                <div class="card-content">
+
+                  <h3 class="h3">
+                    <a href="#" class="card-title">Exercices For Biceps</a>
+                  </h3>
+
+                  <p class="card-text">
+                    Praesent id ipsum pellentesque lectus dapibus condimentum curabitur eget risus quam. In hac
+                    habitasse platea dictumst.
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li class="scrollbar-item">
+              <div class="exercices-card">
+
+                <div class="card-banner img-holder" style="--width: 440; --height: 405;">
+                  <img src="assets/images/triceps-1.gif" width="440" height="270" loading="lazy"
+                    alt="Parturient accumsan cacus pulvinar magna" class="img-cover">
+
+                </div>
+
+                <div class="card-content">
+
+                  <h3 class="h3">
+                    <a href="#" class="card-title">Exercices for Triceps</a>
+                  </h3>
+
+                  <p class="card-text">
+                    Praesent id ipsum pellentesque lectus dapibus condimentum curabitur eget risus quam. In hac
+                    habitasse platea dictumst.
+                  </p>
+
+
+                </div>
+
+              </div>
+            </li>
+
+            <li class="scrollbar-item">
+              <div class="exercices-card">
+
+                <div class="card-banner img-holder" style="--width: 440; --height: 405;">
+                  <img src="assets/images/sdr-1.gif" width="440" height="270" loading="lazy"
+                    alt="Risus purus namien parturient accumsan cacus" class="img-cover">
+
+                </div>
+
+                <div class="card-content">
+
+                  <h3 class="h3">
+                    <a href="#" class="card-title">Exercices for Sdr</a>
+                  </h3>
+
+                  <p class="card-text">
+                    Praesent id ipsum pellentesque lectus dapibus condimentum curabitur eget risus quam. In hac
+                    habitasse platea dictumst.
+                  </p>
+
 
                 </div>
 
