--- a/Exercices.html
+++ b/Exercices.html
@@ -90,7 +90,7 @@
         - #HERO
       -->
 
-      <section class="section hero  has-bg-image" id="home" aria-label="hero" data-section
+      <section class="section hero" id="home" aria-label="hero" data-section
         style="background-image: url('assets/images/banner-programme-2.png')">
       </section>
 
@@ -105,7 +105,7 @@
 
           <p class="section-subtitle">exercices</p>
 
-          <h2 class="h2 section-title text-center">Exercices Tricesps</h2>
+          <h2 class="h2 section-title text-center">Exercices For Legs</h2>
 
           <ul class="exercices-list has-scrollbar">
 
@@ -113,7 +113,7 @@
               <div class="exercices-card">
 
                 <div class="card-banner img-holder" style="--width: 440; --height: 405;">
-                  <img src="assets/images/biceps-1.gif" width="440" height="270" loading="lazy"
+                  <img src="assets/images/GIF/leg-1.gif" width="440" height="270" loading="lazy"
                     alt="Going to the gym for the first time" class="img-cover">
 
                 </div>
@@ -138,7 +138,7 @@
               <div class="exercices-card">
 
                 <div class="card-banner img-holder" style="--width: 440; --height: 405;">
-                  <img src="assets/images/triceps-1.gif" width="440" height="270" loading="lazy"
+                  <img src="assets/images/GIF/leg-2.gif" width="440" height="270" loading="lazy"
                     alt="Parturient accumsan cacus pulvinar magna" class="img-cover">
 
                 </div>
@@ -163,7 +163,7 @@
               <div class="exercices-card">
 
                 <div class="card-banner img-holder" style="--width: 440; --height: 405;">
-                  <img src="assets/images/sdr-1.gif" width="440" height="270" loading="lazy"
+                  <img src="assets/images/GIF/leg-4.gif" width="440" height="270" loading="lazy"
                     alt="Risus purus namien parturient accumsan cacus" class="img-cover">
 
                 </div>
@@ -185,8 +185,89 @@
             </li>
 
           </ul>
+          <br>
+          <ul class="exercices-list has-scrollbar">
+
+            <li class="scrollbar-item">
+              <div class="exercices-card">
+
+                <div class="card-banner img-holder" style="--width: 440; --height: 405;">
+                  <img src="assets/images/GIF/leg-5.gif" width="440" height="270" loading="lazy"
+                    alt="Going to the gym for the first time" class="img-cover">
+
+                </div>
+
+                <div class="card-content">
+
+                  <h3 class="h3">
+                    <a href="#" class="card-title">Exercices For Biceps</a>
+                  </h3>
+
+                  <p class="card-text">
+                    Praesent id ipsum pellentesque lectus dapibus condimentum curabitur eget risus quam. In hac
+                    habitasse platea dictumst.
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li class="scrollbar-item">
+              <div class="exercices-card">
+
+                <div class="card-banner img-holder" style="--width: 440; --height: 405;">
+                  <img src="assets/images/GIF/leg-6.gif" width="440" height="270" loading="lazy"
+                    alt="Parturient accumsan cacus pulvinar magna" class="img-cover">
+
+                </div>
+
+                <div class="card-content">
+
+                  <h3 class="h3">
+                    <a href="#" class="card-title">Exercices for Triceps</a>
+                  </h3>
+
+                  <p class="card-text">
+                    Praesent id ipsum pellentesque lectus dapibus condimentum curabitur eget risus quam. In hac
+                    habitasse platea dictumst.
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li class="scrollbar-item">
+              <div class="exercices-card">
+
+                <div class="card-banner img-holder" style="--width: 440; --height: 405;">
+                  <img src="assets/images/GIF/leg-7.gif" width="440" height="270" loading="lazy"
+                    alt="Risus purus namien parturient accumsan cacus" class="img-cover">
+
+                </div>
+
+                <div class="card-content">
+
+                  <h3 class="h3">
+                    <a href="#" class="card-title">Exercices for Sdr</a>
+                  </h3>
+
+                  <p class="card-text">
+                    Praesent id ipsum pellentesque lectus dapibus condimentum curabitur eget risus quam. In hac
+                    habitasse platea dictumst.
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+
+          </ul>
+          
 
         </div>
+
         <div class="container">
 
           <h2 class="h2 section-title text-center">Exercices Tricesps</h2>
