--- a/Exercices.html
+++ b/Exercices.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -962,6 +961,32 @@
               <div class="exercices-card">
 
                 <div class="card-banner img-holder" style="--width: 440; --height: 405;">
+                  <img src="assets/images/GIF/Shoolders/trapiz-1.gif" width="440" height="270" loading="lazy"
+                    alt="Parturient accumsan cacus pulvinar magna" class="img-cover">
+
+                </div>
+
+                <div class="card-content">
+
+                  <h3 class="h3">
+                    <a href="#" class="card-title">Exercices for Trapiz</a>
+                  </h3>
+
+                  <p class="card-text">
+                    Praesent id ipsum pellentesque lectus dapibus condimentum curabitur eget risus quam. In hac
+                    habitasse platea dictumst.
+                  </p>
+
+
+                </div>
+
+              </div>
+            </li>
+
+            <li class="scrollbar-item">
+              <div class="exercices-card">
+
+                <div class="card-banner img-holder" style="--width: 440; --height: 405;">
                   <img src="assets/images/GIF/Shoolders/shoolders-2.gif" width="440" height="270" loading="lazy"
                     alt="Parturient accumsan cacus pulvinar magna" class="img-cover">
 
@@ -1091,173 +1116,6 @@
           </ul>
 
         </div>
-
-        <div class="container">
-
-
-          <h2 class="h2 section-title text-center">Exercices Trapiz</h2>
-
-          <ul class="exercices-list has-scrollbar">
-
-            <li class="scrollbar-item">
-              <div class="exercices-card">
-
-                <div class="card-banner img-holder" style="--width: 440; --height: 405;">
-                  <img src="assets/images/GIF/Belly/belly-1.gif" width="440" height="270" loading="lazy"
-                    alt="Going to the gym for the first time" class="img-cover">
-
-                </div>
-
-                <div class="card-content">
-
-                  <h3 class="h3">
-                    <a href="#" class="card-title">Exercices For Biceps</a>
-                  </h3>
-
-                  <p class="card-text">
-                    Praesent id ipsum pellentesque lectus dapibus condimentum curabitur eget risus quam. In hac
-                    habitasse platea dictumst.
-                  </p>
-
-                </div>
-
-              </div>
-            </li>
-
-            <li class="scrollbar-item">
-              <div class="exercices-card">
-
-                <div class="card-banner img-holder" style="--width: 440; --height: 405;">
-                  <img src="assets/images/GIF/Belly/belly-2.gif" width="440" height="270" loading="lazy"
-                    alt="Parturient accumsan cacus pulvinar magna" class="img-cover">
-
-                </div>
-
-                <div class="card-content">
-
-                  <h3 class="h3">
-                    <a href="#" class="card-title">Exercices for Triceps</a>
-                  </h3>
-
-                  <p class="card-text">
-                    Praesent id ipsum pellentesque lectus dapibus condimentum curabitur eget risus quam. In hac
-                    habitasse platea dictumst.
-                  </p>
-
-
-                </div>
-
-              </div>
-            </li>
-
-            <li class="scrollbar-item">
-              <div class="exercices-card">
-
-                <div class="card-banner img-holder" style="--width: 440; --height: 405;">
-                  <img src="assets/images/GIF/Belly/belly-3.gif" width="440" height="270" loading="lazy"
-                    alt="Parturient accumsan cacus pulvinar magna" class="img-cover">
-
-                </div>
-
-                <div class="card-content">
-
-                  <h3 class="h3">
-                    <a href="#" class="card-title">Exercices for Triceps</a>
-                  </h3>
-
-                  <p class="card-text">
-                    Praesent id ipsum pellentesque lectus dapibus condimentum curabitur eget risus quam. In hac
-                    habitasse platea dictumst.
-                  </p>
-
-
-                </div>
-
-              </div>
-            </li>
-
-            <li class="scrollbar-item">
-              <div class="exercices-card">
-
-                <div class="card-banner img-holder" style="--width: 440; --height: 405;">
-                  <img src="assets/images/GIF/Belly/belly-4.gif" width="440" height="270" loading="lazy"
-                    alt="Risus purus namien parturient accumsan cacus" class="img-cover">
-
-                </div>
-
-                <div class="card-content">
-
-                  <h3 class="h3">
-                    <a href="#" class="card-title">Exercices for Sdr</a>
-                  </h3>
-
-                  <p class="card-text">
-                    Praesent id ipsum pellentesque lectus dapibus condimentum curabitur eget risus quam. In hac
-                    habitasse platea dictumst.
-                  </p>
-
-
-                </div>
-
-              </div>
-            </li>
-
-            <li class="scrollbar-item">
-              <div class="exercices-card">
-
-                <div class="card-banner img-holder" style="--width: 440; --height: 405;">
-                  <img src="assets/images/GIF/Belly/belly-5.gif" width="440" height="270" loading="lazy"
-                    alt="Risus purus namien parturient accumsan cacus" class="img-cover">
-
-                </div>
-
-                <div class="card-content">
-
-                  <h3 class="h3">
-                    <a href="#" class="card-title">Exercices for Sdr</a>
-                  </h3>
-
-                  <p class="card-text">
-                    Praesent id ipsum pellentesque lectus dapibus condimentum curabitur eget risus quam. In hac
-                    habitasse platea dictumst.
-                  </p>
-
-
-                </div>
-
-              </div>
-            </li>
-
-            <li class="scrollbar-item">
-              <div class="exercices-card">
-
-                <div class="card-banner img-holder" style="--width: 440; --height: 405;">
-                  <img src="assets/images/GIF/Belly/belly-6.gif" width="440" height="270" loading="lazy"
-                    alt="Risus purus namien parturient accumsan cacus" class="img-cover">
-
-                </div>
-
-                <div class="card-content">
-
-                  <h3 class="h3">
-                    <a href="#" class="card-title">Exercices for Sdr</a>
-                  </h3>
-
-                  <p class="card-text">
-                    Praesent id ipsum pellentesque lectus dapibus condimentum curabitur eget risus quam. In hac
-                    habitasse platea dictumst.
-                  </p>
-
-
-                </div>
-
-              </div>
-            </li>
-
-          </ul>
-
-        </div>
-
 
         <div class="container">
 
