--- a/programme.html
+++ b/programme.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fitness | Programme</title>
-    <link rel="shortcut icon" href="favicon.svg" type="image/svg+xml">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/programme.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Catamaran:wght@600;700;800;900&family=Rubik:wght@400;500;800&display=swap"
-      rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Fitness - Work Hard To Get Better Life</title>
+  <link rel="shortcut icon" href="favicon.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="assets/css/style-2.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Catamaran:wght@600;700;800;900&family=Rubik:wght@400;500;800&display=swap"
+    rel="stylesheet">
+  <link rel="preload" as="image" href="assets/images/hero-banner.png">
+  <link rel="preload" as="image" href="assets/images/hero-circle-one.png">
+  <link rel="preload" as="image" href="assets/images/hero-circle-two.png">
+  <link rel="preload" as="image" href="assets/images/heart-rate.svg">
+  <link rel="preload" as="image" href="assets/images/calories.svg">
+
 </head>
+
 <body id="top">
-    <!-- 
+
+  <!-- 
     - #HEADER
   -->
 
@@ -70,18 +80,52 @@
   </header>
 
 
+
+
+
   <main>
     <article>
 
       <!-- 
         - #HERO
       -->
-      <section class="section hero bg-dark " id="home" aria-label="hero" data-section
-        style="background-image: url('assets/images/banner-programme.png')">
+
+      <section class="section hero" id="home" aria-label="hero" data-section
+        style="background-image: url('assets/images/banner-programme-2.png')">
       </section>
 
 
       <!-- 
+        - PROGRAMME
+      -->
+
+
+      <section class="section exercices" id="exercices" aria-label="exercices">
+   
+        <div class="container">
+
+          <p class="section-subtitle">programme</p>
+          <h2 class="h2 section-title text-center">Monday</h2>
+
+        </div>
+
+
+      </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+      
+  <!-- 
     - #FOOTER
   -->
 
@@ -111,11 +155,11 @@
           </li>
 
           <li>
-            <a href="index.html" class="footer-link">Home</a>
+            <a href="#home" class="footer-link">Home</a>
           </li>
 
           <li>
-            <a href="index.html#about" class="footer-link">About Us</a>
+            <a href="#about" class="footer-link">About Us</a>
           </li>
 
           <li>
@@ -245,6 +289,6 @@
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
-
 </body>
+
 </html>
