--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
           </li>
 
           <li>
-            <a href="#" class="navbar-link" data-nav-link>Contact Us</a>
+            <a href="contact.html" class="navbar-link" data-nav-link>Contact Us</a>
           </li>
 
         </ul>
 
       </nav>
 
-      <a href="#" class="btn btn-secondary">Join Now</a>
+      <a href="contact.html" class="btn btn-secondary">Join Now</a>
 
       <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
         <span class="line"></span>
@@ -78,10 +78,6 @@
 
     </div>
   </header>
-
-
-
-
 
   <main>
     <article>
@@ -212,7 +208,7 @@
               <div class="exercices-card">
 
                 <div class="card-banner img-holder" style="--width: 440; --height: 405;">
-                  <img src="assets/images/biceps-1.gif" width="440" height="270" loading="lazy"
+                  <img src="assets/images/GIF/Biceps/biceps-1.gif" width="440" height="270" loading="lazy"
                     alt="Going to the gym for the first time" class="img-cover">
 
                 </div>
@@ -239,7 +235,7 @@
               <div class="exercices-card">
 
                 <div class="card-banner img-holder" style="--width: 440; --height: 405;">
-                  <img src="assets/images/triceps-1.gif" width="440" height="270" loading="lazy"
+                  <img src="assets/images/GIF/Triceps/triceps-2.gif" width="440" height="270" loading="lazy"
                     alt="Parturient accumsan cacus pulvinar magna" class="img-cover">
 
                 </div>
@@ -266,7 +262,7 @@
               <div class="exercices-card">
 
                 <div class="card-banner img-holder" style="--width: 440; --height: 405;">
-                  <img src="assets/images/sdr-1.gif" width="440" height="270" loading="lazy"
+                  <img src="assets/images/GIF/Shoolders/shoolders-1.gif" width="440" height="270" loading="lazy"
                     alt="Risus purus namien parturient accumsan cacus" class="img-cover">
 
                 </div>
