--- a/programme.html
+++ b/programme.html
@@ -14,11 +14,11 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Catamaran:wght@600;700;800;900&family=Rubik:wght@400;500;800&display=swap"
     rel="stylesheet">
-<!--   <link rel="preload" as="image" href="assets/images/hero-banner.png">
+  <link rel="preload" as="image" href="assets/images/hero-banner.png">
   <link rel="preload" as="image" href="assets/images/hero-circle-one.png">
   <link rel="preload" as="image" href="assets/images/hero-circle-two.png">
   <link rel="preload" as="image" href="assets/images/heart-rate.svg">
-  <link rel="preload" as="image" href="assets/images/calories.svg"> -->
+  <link rel="preload" as="image" href="assets/images/calories.svg">
 
 </head>
 
@@ -61,14 +61,14 @@
           </li>
 
           <li>
-            <a href="#" class="navbar-link" data-nav-link>Contact Us</a>
+            <a href="contact.html" class="navbar-link" data-nav-link>Contact Us</a>
           </li>
 
         </ul>
 
       </nav>
 
-      <a href="#" class="btn btn-secondary">Join Now</a>
+      <a href="contact.html" class="btn btn-secondary">Join Now</a>
 
       <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
         <span class="line"></span>
@@ -192,7 +192,7 @@
           <div class="section_container">
             <div class="programme_container">
               <div class="text_section">
-                <h2 class="section_title">Saturday</h2>
+                <h2 class="section_title">Sunday</h2>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, sit architecto harum eligendi adipisci explicabo temporibus officia cum expedita fugit officiis eos in, commodi tempora facilis consequatur veritatis perspiciatis ipsum.
                 </p>
